germany,austria and spanish teaser and launch pages create and text change

--- a/src/en-gb.html
+++ b/src/en-gb.html
@@ -46,12 +46,14 @@
 
         <!-- hero section -->
         <div class="flex flex-col justify-center mt-9">
+          <!-- translation key 1 -->
           <h1
             class="w-[328px] md:w-[400px] lg:w-[550px] xl:w-[730px] xl:leading-[77px] mx-auto text-center uppercase"
           >
             A PASTA THAT LOVES SAUCE, FOR TRUE PASTA LOVERS
           </h1>
 
+          <!-- translation key 2 -->
           <p
             class="w-[328px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-5"
           >
@@ -79,10 +81,12 @@
     <!-- 360 degree section -->
     <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="custom-container">
+        <!-- translation key 3 -->
         <h1 class="w-full mx-auto text-center uppercase">
           REINVENTING TRADITION
         </h1>
 
+        <!-- translation key 4 -->
         <p
           class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
         >
@@ -118,12 +122,14 @@
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
+        <!-- translation key 5 -->
         <h1
           class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           ALL THE SHAPES TO SUIT EVERY PALATE
         </h1>
 
+        <!-- translation key 6 -->
         <p
           class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
         >
@@ -290,6 +296,7 @@
       </video>
 
       <!-- Content -->
+      <!-- translation key 13 -->
       <p
         class="relative w-[312px] md:w-[400px] lg:w-[460px] lg:text-2xl mx-auto text-center text-white z-10"
       >
@@ -316,11 +323,14 @@
 
       <!-- Content -->
       <div class="relative z-10 text-white text-center">
+        <!-- translation key 7 -->
         <h1
           class="w-[260px] md:w-[370px] lg:w-[450px] xl:w-[550px] mx-auto text-center uppercase"
         >
           An extraordinary sauce grip
         </h1>
+
+        <!-- translation key 8 -->
         <p
           class="w-[312px] sm:w-[400px] md:w-[500px] lg:w-[600px] lg:text-2xl mx-auto text-center pt-5"
         >
@@ -335,11 +345,14 @@
     <section class="bg-red py-16">
       <!-- img + text -->
       <div class="custom-container">
+        <!-- translation key 9 -->
         <h1
           class="w-[328px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
         >
           A PLEASURE FOR THE EYES AND THE PALATE 
         </h1>
+
+        <!-- translation key 10 -->
         <p
           class="w-[250px] md:w-[300px] lg:w-full mx-auto lg:text-2xl text-center pt-5"
         >
@@ -356,10 +369,12 @@
 
       <!-- video carousel -->
       <div>
+        <!-- translation key 11 -->
         <h1 class="text-center uppercase">
           HEAR IT FROM
           <h1 class="text-center">A MICHELIN-STARRED CHEF</h1>
         </h1>
+        <!-- translation key 12 -->
         <p class="lg:text-2xl w-[300px] lg:w-full mx-auto text-center pt-5">
           Recreate these Barilla Al Bronzo pasta recipes by Chef Oldani.
         </p>
@@ -370,43 +385,175 @@
           <div class="swiper videoSwiper relative mt-10">
             <div class="swiper-wrapper">
               <!-- img1 -->
-              <div class="swiper-slide">
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img1.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[230px] md:w-[270px] lg:w-[240px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  MEZZI RIGATONI POMODORO E MENTA OLDANI
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
                 <a
-                  href="https://www.youtube.com/watch?v=tcvPFmF14BY"
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                   class="glightbox"
                 >
                   <img
-                    src="./assets/images/video-carousel-section/img2.webp"
+                    src="./assets/images/video-play.svg"
                     alt="pic"
-                    class="w-full h-[430px] object-cover rounded-2xl"
+                    class="absolute bottom-8 right-6"
                   />
                 </a>
               </div>
 
               <!-- img2 -->
-              <div class="swiper-slide">
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img2.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[140px] md:w-[170px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  SPAGHETTI CACIO E PEPE
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
                 <a
-                  href="https://www.youtube.com/watch?v=Cr9XpOkncPc"
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                   class="glightbox"
                 >
                   <img
-                    src="./assets/images/video-carousel-section/img1.webp"
+                    src="./assets/images/video-play.svg"
                     alt="pic"
-                    class="w-full h-[430px] object-cover rounded-2xl"
+                    class="absolute bottom-8 right-6"
                   />
                 </a>
               </div>
 
               <!-- img3 -->
-              <div class="swiper-slide">
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img3.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[150px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center uppercase"
+                >
+                  penne patate e cozze oldani
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
                 <a
-                  href="https://www.youtube.com/watch?v=MsQvtVjstI0"
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                   class="glightbox"
                 >
                   <img
-                    src="./assets/images/video-carousel-section/img3.webp"
+                    src="./assets/images/video-play.svg"
                     alt="pic"
-                    class="w-full h-[430px] object-cover rounded-2xl"
+                    class="absolute bottom-8 right-6"
+                  />
+                </a>
+              </div>
+              <!-- img4 -->
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img1.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[230px] md:w-[270px] lg:w-[240px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  MEZZI RIGATONI POMODORO E MENTA OLDANI
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
+                <a
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                  class="glightbox"
+                >
+                  <img
+                    src="./assets/images/video-play.svg"
+                    alt="pic"
+                    class="absolute bottom-8 right-6"
+                  />
+                </a>
+              </div>
+
+              <!-- img5 -->
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img2.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[140px] md:w-[170px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  SPAGHETTI CACIO E PEPE
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
+                <a
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                  class="glightbox"
+                >
+                  <img
+                    src="./assets/images/video-play.svg"
+                    alt="pic"
+                    class="absolute bottom-8 right-6"
                   />
                 </a>
               </div>
