--- a/src/en-launch.html
+++ b/src/en-launch.html
@@ -49,6 +49,7 @@
 
         <!-- hero section -->
         <div class="flex flex-col justify-center">
+          <!-- translation key 1 -->
           <h1
             class="w-[230px] md:w-[450px] xl:w-[480px] 2xl:w-[710px] mx-auto md:text-[64px] 2xl:text-[83px] md:leading-[77px] 2xl:leading-[80px] text-center uppercase pt-12 sm:pt-24 md:pt-12 lg:pt-48 xl:pt-72 2xl:pt-[350px]"
           >
@@ -104,6 +105,7 @@
       class="relative h-[444px] md:h-[419px] lg:h-[619px] xl:h-[708px] 2xl:h-[808px] bg-red flex items-center justify-center"
     >
       <div>
+        <!-- translation key 2 -->
         <h1
           class="w-[260px] md:w-[300px] lg:w-[400px] xl:w-[530px] mx-auto text-center uppercase"
         >
@@ -164,9 +166,11 @@
 
       <!-- Content -->
       <div class="relative z-10 text-white text-center">
+        <!-- translation key 3 -->
         <h1 class="w-[230px] md:w-full mx-auto text-center uppercase">
           THE PASTA THAT DOES SCARPETTA
         </h1>
+        <!-- translation key 4   -->
         <p class="w-[312px] sm:w-[400px] md:w-full mx-auto text-center pt-5">
           Experience the Italian way of capturing every drop of sauce with
           Barilla Al Bronzo.
@@ -176,11 +180,14 @@
 
     <section class="bg-red">
       <div class="custom-container pt-16 pb-8">
+        <!-- translation key 5 -->
         <h1
           class="w-[300px] md:w-full lg:w-[500px] xl:w-[600px] mx-auto text-center uppercase"
         >
           SCARPETTA? IT’S MORE THAN A GESTURE
         </h1>
+
+        <!-- translation key 6 -->
         <p
           class="w-[328px] md:w-[400px] lg:w-[470px] mx-auto lg:text-2xl text-center pt-6"
         >
@@ -206,10 +213,11 @@
     <!-- 360 degree section -->
     <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="custom-container">
+        <!-- translation key 7 -->
         <h1 class="w-full mx-auto text-center uppercase">
           REINVENTING TRADITION
         </h1>
-
+        <!-- translation key 8 -->
         <p
           class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
         >
@@ -245,12 +253,13 @@
 
       <!-- container -->
       <div class="custom-container pt-4 pb-10">
+        <!-- translation key 9 -->
         <h1
           class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
           ALL THE SHAPES TO SUIT EVERY PALATE
         </h1>
-
+        <!-- translation key 10 -->
         <p
           class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
         >
@@ -415,6 +424,7 @@
       </video>
 
       <div class="relative z-10 text-white text-center">
+        <!-- translation key 17 -->
         <p
           class="w-[312px] md:w-[400px] lg:w-[460px] lg:text-2xl mx-auto text-center"
         >
@@ -429,9 +439,12 @@
       class="relative h-[640px] md:h-[432px] lg:h-[576px] xl:h-[719px] 2xl:h-[808px] flex items-center justify-center bg-david-oldani bg-cover bg-center bg-no-repeat"
     >
       <div class="text-center text-white z-10">
+        <!-- translation key 11 -->
         <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold uppercase mb-4">
           DAVIDE OLDANI
         </h1>
+
+        <!-- translation key 12 -->
         <p
           class="max-w-[312px] md:max-w-[400px] lg:max-w-[500px] xl:max-w-[690px] text-base md:text-lg lg:text-xl mx-auto"
         >
@@ -446,9 +459,12 @@
     <section class="bg-red py-16">
       <!-- video carousel -->
       <div>
+        <!-- translation key 13 -->
         <h1 class="w-[300px] md:w-full mx-auto text-center uppercase">
           Learn from the chef himself
         </h1>
+
+        <!-- translation key 14 -->
         <p
           class="lg:text-2xl w-[340px] md:w-[400px] lg:w-[500px] mx-auto text-center pt-5"
         >
@@ -463,43 +479,175 @@
           <div class="swiper videoSwiper relative mt-10">
             <div class="swiper-wrapper">
               <!-- img1 -->
-              <div class="swiper-slide">
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img1.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[230px] md:w-[270px] lg:w-[240px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  MEZZI RIGATONI POMODORO E MENTA OLDANI
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
                 <a
-                  href="https://www.youtube.com/watch?v=tcvPFmF14BY"
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                   class="glightbox"
                 >
                   <img
-                    src="./assets/images/video-carousel-section/img2.webp"
+                    src="./assets/images/video-play.svg"
                     alt="pic"
-                    class="w-full h-[430px] object-cover rounded-2xl"
+                    class="absolute bottom-8 right-6"
                   />
                 </a>
               </div>
 
               <!-- img2 -->
-              <div class="swiper-slide">
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img2.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[140px] md:w-[170px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  SPAGHETTI CACIO E PEPE
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
                 <a
-                  href="https://www.youtube.com/watch?v=Cr9XpOkncPc"
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                   class="glightbox"
                 >
                   <img
-                    src="./assets/images/video-carousel-section/img1.webp"
+                    src="./assets/images/video-play.svg"
                     alt="pic"
-                    class="w-full h-[430px] object-cover rounded-2xl"
+                    class="absolute bottom-8 right-6"
                   />
                 </a>
               </div>
 
               <!-- img3 -->
-              <div class="swiper-slide">
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img3.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[150px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center uppercase"
+                >
+                  penne patate e cozze oldani
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
                 <a
-                  href="https://www.youtube.com/watch?v=MsQvtVjstI0"
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                   class="glightbox"
                 >
                   <img
-                    src="./assets/images/video-carousel-section/img3.webp"
+                    src="./assets/images/video-play.svg"
                     alt="pic"
-                    class="w-full h-[430px] object-cover rounded-2xl"
+                    class="absolute bottom-8 right-6"
+                  />
+                </a>
+              </div>
+              <!-- img4 -->
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img1.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[230px] md:w-[270px] lg:w-[240px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  MEZZI RIGATONI POMODORO E MENTA OLDANI
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
+                <a
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                  class="glightbox"
+                >
+                  <img
+                    src="./assets/images/video-play.svg"
+                    alt="pic"
+                    class="absolute bottom-8 right-6"
+                  />
+                </a>
+              </div>
+
+              <!-- img5 -->
+              <div class="relative swiper-slide">
+                <img
+                  src="./assets/images/video-carousel-section/img2.webp"
+                  alt="pic"
+                  class="w-full h-[430px] object-cover rounded-2xl"
+                />
+                <!-- absolute title -->
+                <h2
+                  class="w-[140px] md:w-[170px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                >
+                  SPAGHETTI CACIO E PEPE
+                </h2>
+
+                <!--absolute logo -->
+
+                <img
+                  src="./assets/images/carousel-section/Al-Bronzo.svg"
+                  alt="pic"
+                  class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                />
+
+                <!--absolute video play button -->
+                <a
+                  href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                  class="glightbox"
+                >
+                  <img
+                    src="./assets/images/video-play.svg"
+                    alt="pic"
+                    class="absolute bottom-8 right-6"
                   />
                 </a>
               </div>
@@ -542,11 +690,13 @@
 
       <!-- img + text -->
       <div class="custom-container mt-8 md:mt-10 lg:mt-12">
+        <!-- translation key 15 -->
         <h1
           class="w-[250px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
         >
           a Pleasure for the eyes and the plate
         </h1>
+        <!-- translation key 16 -->
         <p class="w-[260px] md:w-full mx-auto lg:text-2xl text-center pt-6">
           Fall in love with classic and creative recipes with Barilla al Bronzo.
         </p>
