--- a/src/it-it.html
+++ b/src/it-it.html
@@ -120,7 +120,7 @@
       <section class="relative bg-bronze-200">
         <!-- clippy path div -->
         <div
-          class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+          class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[140px] lg:-top-[180px] absolute bg-bronze-200 z-40"
         ></div>
 
         <!-- container -->
@@ -391,70 +391,175 @@
             <div class="swiper videoSwiper relative mt-10">
               <div class="swiper-wrapper">
                 <!-- img1 -->
-                <div class="swiper-slide">
+                <div class="relative swiper-slide">
+                  <img
+                    src="./assets/images/video-carousel-section/img1.webp"
+                    alt="pic"
+                    class="w-full h-[430px] object-cover rounded-2xl"
+                  />
+                  <!-- absolute title -->
+                  <h2
+                    class="w-[230px] md:w-[270px] lg:w-[240px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                  >
+                    MEZZI RIGATONI POMODORO E MENTA OLDANI
+                  </h2>
+
+                  <!--absolute logo -->
+
+                  <img
+                    src="./assets/images/carousel-section/Al-Bronzo.svg"
+                    alt="pic"
+                    class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                  />
+
+                  <!--absolute video play button -->
                   <a
                     href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                     class="glightbox"
                   >
                     <img
-                      src="./assets/images/video-carousel-section/img1.webp"
+                      src="./assets/images/video-play.svg"
                       alt="pic"
-                      class="w-full h-[430px] object-cover rounded-2xl"
+                      class="absolute bottom-8 right-6"
                     />
                   </a>
                 </div>
 
                 <!-- img2 -->
-                <div class="swiper-slide">
+                <div class="relative swiper-slide">
+                  <img
+                    src="./assets/images/video-carousel-section/img2.webp"
+                    alt="pic"
+                    class="w-full h-[430px] object-cover rounded-2xl"
+                  />
+                  <!-- absolute title -->
+                  <h2
+                    class="w-[140px] md:w-[170px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                  >
+                    SPAGHETTI CACIO E PEPE
+                  </h2>
+
+                  <!--absolute logo -->
+
+                  <img
+                    src="./assets/images/carousel-section/Al-Bronzo.svg"
+                    alt="pic"
+                    class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                  />
+
+                  <!--absolute video play button -->
                   <a
                     href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                     class="glightbox"
                   >
                     <img
-                      src="./assets/images/video-carousel-section/img2.webp"
+                      src="./assets/images/video-play.svg"
                       alt="pic"
-                      class="w-full h-[430px] object-cover rounded-2xl"
+                      class="absolute bottom-8 right-6"
                     />
                   </a>
                 </div>
 
                 <!-- img3 -->
-                <div class="swiper-slide">
+                <div class="relative swiper-slide">
+                  <img
+                    src="./assets/images/video-carousel-section/img3.webp"
+                    alt="pic"
+                    class="w-full h-[430px] object-cover rounded-2xl"
+                  />
+                  <!-- absolute title -->
+                  <h2
+                    class="w-[150px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center uppercase"
+                  >
+                    penne patate e cozze oldani
+                  </h2>
+
+                  <!--absolute logo -->
+
+                  <img
+                    src="./assets/images/carousel-section/Al-Bronzo.svg"
+                    alt="pic"
+                    class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                  />
+
+                  <!--absolute video play button -->
                   <a
                     href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                     class="glightbox"
                   >
                     <img
-                      src="./assets/images/video-carousel-section/img3.webp"
+                      src="./assets/images/video-play.svg"
                       alt="pic"
-                      class="w-full h-[430px] object-cover rounded-2xl"
+                      class="absolute bottom-8 right-6"
                     />
                   </a>
                 </div>
                 <!-- img4 -->
-                <div class="swiper-slide">
+                <div class="relative swiper-slide">
+                  <img
+                    src="./assets/images/video-carousel-section/img1.webp"
+                    alt="pic"
+                    class="w-full h-[430px] object-cover rounded-2xl"
+                  />
+                  <!-- absolute title -->
+                  <h2
+                    class="w-[230px] md:w-[270px] lg:w-[240px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                  >
+                    MEZZI RIGATONI POMODORO E MENTA OLDANI
+                  </h2>
+
+                  <!--absolute logo -->
+
+                  <img
+                    src="./assets/images/carousel-section/Al-Bronzo.svg"
+                    alt="pic"
+                    class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                  />
+
+                  <!--absolute video play button -->
                   <a
                     href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                     class="glightbox"
                   >
                     <img
-                      src="./assets/images/video-carousel-section/img1.webp"
+                      src="./assets/images/video-play.svg"
                       alt="pic"
-                      class="w-full h-[430px] object-cover rounded-2xl"
+                      class="absolute bottom-8 right-6"
                     />
                   </a>
                 </div>
 
                 <!-- img5 -->
-                <div class="swiper-slide">
+                <div class="relative swiper-slide">
+                  <img
+                    src="./assets/images/video-carousel-section/img2.webp"
+                    alt="pic"
+                    class="w-full h-[430px] object-cover rounded-2xl"
+                  />
+                  <!-- absolute title -->
+                  <h2
+                    class="w-[140px] md:w-[170px] md:text-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center"
+                  >
+                    SPAGHETTI CACIO E PEPE
+                  </h2>
+
+                  <!--absolute logo -->
+
+                  <img
+                    src="./assets/images/carousel-section/Al-Bronzo.svg"
+                    alt="pic"
+                    class="w-[86px] h-auto absolute top-6 left-1/2 -translate-x-1/2"
+                  />
+
+                  <!--absolute video play button -->
                   <a
                     href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
                     class="glightbox"
                   >
                     <img
-                      src="./assets/images/video-carousel-section/img2.webp"
+                      src="./assets/images/video-play.svg"
                       alt="pic"
-                      class="w-full h-[430px] object-cover rounded-2xl"
+                      class="absolute bottom-8 right-6"
                     />
                   </a>
                 </div>
@@ -466,7 +571,6 @@
           <div
             class="w-[300px] md:w-[454px] mx-auto flex items-center gap-3 mt-8"
           >
-            <!-- progress bar -->
             <!-- progress bar -->
             <div id="progress-bar" class="w-full h-[2px] bg-white relative">
               <div
